fix: adjust categories menu z-index

--- a/apps/encontrar/src/styles/menu-categories.css
+++ b/apps/encontrar/src/styles/menu-categories.css
@@ -19,7 +19,7 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  z-index: 999;
+  z-index: 999999;
   top: 0;
   right: 0;
   /* background: rgba(0, 0, 0, 0.3); */
